# django-tasksapi

./: .flake8  README.md  pyproject.toml
tasks/tasks/: settings.py  urls.py
tasks/tasks_api/: apps.py  models.py  serializers.py  urls.py  views.py
tasks/tasks_api/migrations/: 0001_initial.py
