[tool.poetry]
name = "tasks_api"
version = "0.1.0"
description = "Django API project to help user track their task list"
authors = ["Yow Ler <yow_wei_1995@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
djangorestframework = "^3.14.0"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
isort = "^5.12.0"
poethepoet = "^0.22.0"
flake8 = "^6.1.0"
autoflake = "^2.2.0"
toml-sort = "^0.23.1"

[tool.isort]
profile = "black"
skip_glob = ["**/.**"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
_autoflake = "autoflake --remove-all-unused-imports --remove-unused-variables --recursive --in-place ."
_black = "black --verbose ."
_flake = "flake8 ."
_git-clean = "git clean -Xdf"
_isort = "isort --verbose ."
_lint-black = "black --check --diff ."
_lint-isort = "isort --check --diff ."
_lint-toml-sort = "toml-sort --check pyproject.toml"
_lint-poetry = "poetry check"
_toml-sort = "toml-sort --in-place pyproject.toml"
auto_format = ["_autoflake", "_isort", "_black", "_toml-sort"]
check_format = ["_lint-poetry", "_lint-black", "_lint-isort", "_lint-toml-sort"]
clean = ["_git-clean"]
lint = ["_lint-black", "_lint-isort", "_flake"]
pre_commit = ["check_format", "lint"]
run_server = "python tasks/manage.py runserver"
migrate = "python tasks/manage.py migrate"
make_migrations = "python tasks/manage.py makemigrations"